fix layout issues with menus

--- a/app/javascript/stylesheets/partials/homepage.scss
+++ b/app/javascript/stylesheets/partials/homepage.scss
@@ -5,7 +5,7 @@
 
   & p.summary {
     font-size: 18px;
-    margin: 0;
+    margin: 0 0 25px 0;
     max-width: 900px;
   }
 
@@ -26,7 +26,7 @@
 
   & .stats span {
   	display: inline-block;
-    font-size: 2rem;
+    font-size: 1.2rem;
   	font-weight: 500;
   	min-width: 75px;
   	padding: 0 8px 0 0;
